idf_component_register(
  SRCS
  "gpiolib.cpp"
  "mathlib.cpp"
  "strlib.cpp"
  "display.cpp"
  "led.cpp"
  "rotary_encoder.c"
  "menu_item.cpp"
  "menu.cpp"
  "menu_system.cpp"
  "input_controller.cpp"
  "time.cpp"
  "wire.cpp"
  "step_motor_config.cpp"
  "step_motor_hal.cpp"
  "step_motor.cpp"
  "kinematic.cpp"
  "coil.cpp"
  "orthocyclic_round.cpp"
  "main.cpp"
   INCLUDE_DIRS "")
